--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
-title: Nano-technology in Healthcare
-description: How can nano-technology create efficiency in Healthcare
+title: Nanotechnology in Healthcare
+description: How can nanotechnology create efficiency in Healthcare
+footer: This webpage is in solidarity with Ukraine
 
